--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         <input type="text" id="firstName" required>
                     </div>
                     <div class="form-group">
-                        <label>Middle Name</label>
+                        <label>Middle Name <span class="required">*</span></label>
                         <input type="text" id="middleName" placeholder="Optional">
                     </div>
                 </div>
