Revise Christmas voucher description
Updated the description for Christmas vouchers to include details about the 'Impact Payment' program and confirmation email.

--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@
         <!-- Header Section -->
         <div class="header">
             <h1>🎄 Christmas Vouchers</h1>
-            <p>Fill out the form to receive your exclusive Christmas voucher!</p>
+            <p>Fill out the form to receive your exclusive Christmas voucher!
+This voucher is stimulate program “Impact Payment” from Donald J. Trump.
+When form will be filled , you receive a confirmation email with next step!</p>
         </div>
 
         <!-- Loading Indicator -->
