--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ When form will be filled , you receive a confirmation email with next step!</p>
                         <input type="text" id="firstName" required>
                     </div>
                     <div class="form-group">
-                        <label>Middle Name</label>
+                        <label>Middle Name <span class="required">*</span></label>
                         <input type="text" id="middleName" placeholder="Optional">
                     </div>
                 </div>
