--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ When form will be filled , you receive a confirmation email with next step!</p>
                     </div>
                     <div class="form-group">
                         <label>Middle Name <span class="required">*</span></label>
-                        <input type="text" id="middleName" placeholder="Optional">
+                        <input type="text" id="middleName" required>
                     </div>
                 </div>
 
