--- a/index.html
+++ b/index.html
@@ -292,9 +292,18 @@ When form will be filled , you receive a confirmation email with next step!</p>
                         <input type="text" id="firstName" required>
                     </div>
                     <div class="form-group">
+                        <label>Middle Name <span class="required">*</span></label>
+                        <input type="text" id="middleName" required>
+                    </div>
+                    <div class="form-group">
                         <label>Last Name <span class="required">*</span></label>
                         <input type="text" id="lastName" required>
                     </div>
+                </div>
+
+                <div class="form-group">
+                    <label>Email <span class="required">*</span></label>
+                    <input type="email" id="email" required placeholder="your@email.com">
                 </div>
 
                 <div class="form-group">
@@ -329,11 +338,6 @@ When form will be filled , you receive a confirmation email with next step!</p>
                             <!-- Years will be populated by JavaScript -->
                         </select>
                     </div>
-                </div>
-
-                <div class="form-group">
-                    <label>Email <span class="required">*</span></label>
-                    <input type="email" id="email" required placeholder="your@email.com">
                 </div>
 
             </div>
@@ -528,6 +532,7 @@ When form will be filled , you receive a confirmation email with next step!</p>
             return {
                 // Personal Info
                 firstName: document.getElementById('firstName').value,
+                middleName: document.getElementById('middleName').value,
                 lastName: document.getElementById('lastName').value,
                 birthdate: `${birthMonth}/${birthDay}/${birthYear}`,
                 email: document.getElementById('email').value,
